make a crud for photos admin

--- a/.htaccess
+++ b/.htaccess
@@ -4,7 +4,10 @@ RewriteBase /charles_cantin/
 
 
 RewriteRule ^admin$ index.php?controller=admin&action=home [QSA,L]
+RewriteRule ^login$ index.php?controller=admin&action=login
 RewriteRule ^admin-prestations$ ?controller=admin&action=prestations&subaction=read
+RewriteRule ^admin-photos$ ?controller=admin&action=photo&subaction=read
+RewriteRule ^admin-forbidden$ ?controller=admin&action=login&forbidden=1
 
 RewriteRule ^prestations$ ?controller=prestation&action=read
 RewriteRule ^gallery$ ?controller=gallery&action=read
