--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,10 @@
 {
   "require": {
-    "monolog/monolog": "^2.0"
+    "nette/robot-loader": "^4.0"
+  },
+  "autoload": {
+    "psr-4": {
+      "App\\": "App/"
+    }
   }
 }
