--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,7 @@
 {
-  "require": {
-    "nette/robot-loader": "^4.0"
-  },
   "autoload": {
     "psr-4": {
-      "App\\": "App/"
+      "App\\": "app/"
     }
   }
 }
