--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,6 @@
 RewriteEngine On
-RewriteBase /charles_cantin/
+# RewriteBase /charles_cantin/
+RewriteBase /
 
 
 
@@ -11,6 +12,7 @@ RewriteRule ^admin-gallery$ ?controller=admin&action=gallery&subaction=read
 RewriteRule ^admin-forbidden$ ?controller=admin&action=login&forbidden=1
 
 RewriteRule ^prestations$ ?controller=prestation&action=read
+
 RewriteRule ^gallery$ ?controller=gallery&action=read
 
 RewriteRule ^admin-prestations-update/([0-9]+)$ ?controller=admin&action=prestations&subaction=update&id=$1
