--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,6 @@
 RewriteEngine On
-RewriteBase /charles-cantin-nesme-f6af6cc1162d.herokuapp.com/
-# RewriteBase /
+# RewriteBase /charles-cantin-nesme-f6af6cc1162d.herokuapp.com/
+RewriteBase /
 
 
 
