--- a/.htaccess
+++ b/.htaccess
@@ -15,6 +15,8 @@ RewriteRule ^prestations$ ?controller=prestation&action=read
 
 RewriteRule ^gallery$ ?controller=gallery&action=read
 
+RewriteRule ^contact$ ?controller=contact&action=contact
+
 RewriteRule ^admin-prestations-update/([0-9]+)$ ?controller=admin&action=prestations&subaction=update&id=$1
 
 
